--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "sso",
+    "name": "business",
     "version": "0.0.1",
     "description": "",
     "author": "",
     "private": true,
-    "license": "UNLICENSED",
+    "license": "MIT",
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -25,17 +25,22 @@
         "migration_revert": "yarn run typeorm migration:revert"
     },
     "dependencies": {
+        "@nestjs/axios": "^3.0.2",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.0",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/microservices": "^10.3.10",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.3.0",
         "@nestjs/typeorm": "^10.0.2",
         "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
+        "axios": "^1.7.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
         "pg": "^8.11.3",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
