--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
         "pg": "^8.11.3",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
+        "swagger": "^0.7.5",
+        "swagger-ui-express": "^5.0.1",
         "typeorm": "^0.3.20"
     },
     "devDependencies": {
