--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "axios": "^1.7.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "cookie-parser": "^1.4.6",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
         "pg": "^8.11.3",
@@ -52,6 +53,7 @@
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
+        "@types/cookie-parser": "^1.4.7",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.1",
