447-feat/business-create-getByOwnerId
- Реализовал роут по созданию бизнеса и получению по ownerId
- Также не закончил реализацию создания admin

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,5 @@ JWT_ACCESS_EXPIRES=30m
 JWT_SECRET=mishalovescats1
 JWT_REFRESH_SECRET=mishalovescats2
 
-ACCOUNT_SERVICE_PORT = 8001
-ACCOUNT_SERVICE_HOST=localhost
+SSO_SERVICE_PORT = 8001
+SSO_SERVICE_HOST=localhost
