--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ API_PORT_BUSINESS = 8003
 BASE_URI=localhost
 FRONT_URI=localhost
 FRONT_PORT=3000
-PORT = 5433
+POSTGRES_PORT = 5433
 POSTGRES_HOST=localhost
 POSTGRES_USER=test_user 
 POSTGRES_DB=business_db
