--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,5 @@ JWT_REFRESH_SECRET=mishalovescats2
 JWT_ACCESS_EXPIRES=30m
 JWT_ACCESS_SECRET=mishalovescats1
 
-SSO_SERVICE_PORT = 5000
-SSO_SERVICE_HOST=localhost
+SSO_MICROSERVICE_PORT = 4000
+SSO_MICROSERVICE_HOST=localhost
