fix(infra): fix env fix main.ts

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 NODE_ENV=development
 
 API_PORT_BUSINESS = 5001
+API_NAME=BUSINESS
 BASE_URI=localhost
 
-FRONT_URI=localhost
-FRONT_PORT=3000
+FRONTEND_BUSINESS_URL=http://localhost:3000
 
 POSTGRES_HOST=localhost
 POSTGRES_USER=test_user
