--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 
-API_PORT_BUSINESS = 5001
+API_PORT_BUSINESS=5001
 API_NAME=BUSINESS
 BASE_URI=localhost
 
@@ -17,5 +17,5 @@ JWT_REFRESH_SECRET=mishalovescats2
 JWT_ACCESS_EXPIRES=30m
 JWT_ACCESS_SECRET=mishalovescats1
 
-SSO_MICROSERVICE_PORT = 4000
+SSO_MICROSERVICE_PORT=4000
 SSO_MICROSERVICE_HOST=localhost
