--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
         "axios": "^1.7.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
+        "helmet": "^7.1.0",
+        "passport": "^0.7.0",
         "pg": "^8.11.3",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
@@ -53,10 +56,12 @@
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
+        "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.7",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.1",
+        "@types/passport": "^1.0.16",
         "@types/supertest": "^6.0.0",
         "argon2": "^0.40.1",
         "eslint": "^8.42.0",
