422-feat/admin-cruds
- Реализовать создание с использованием domainEntity
- Использовал domainEntity в business create

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV=development
-API_PORT_BUSINESS = 8003
+API_PORT_BUSINESS = 5001
 BASE_URI=localhost
 FRONT_URI=localhost
 FRONT_PORT=3000
@@ -15,5 +15,5 @@ JWT_ACCESS_EXPIRES=30m
 JWT_SECRET=mishalovescats1
 JWT_REFRESH_SECRET=mishalovescats2
 
-SSO_SERVICE_PORT = 8001
-SSO_SERVICE_HOST=localhost
+SSO_MICROSERVICE_PORT = 4000
+SSO_MICROSERVICE_HOST=localhost
