--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "class-validator": "^0.14.1",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
+        "madge": "^7.0.0",
         "pg": "^8.11.3",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
