--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "dotenv": "^16.4.5",
         "helmet": "^7.1.0",
         "passport": "^0.7.0",
+        "lodash": "^4.17.21",
         "madge": "^7.0.0",
         "pg": "^8.11.3",
         "reflect-metadata": "^0.2.0",
